# lazyfoo-sdl2

./: .gitignore  01_hello_SDL2.cpp  CMakeLists.txt  Makefile  README.md  setup.sh
01_hello_sdl/: 01_hello_SDL2.cpp  CMakeLists.txt
02_getting_an_image_on_screen/: 02_getting_an_image_on_screen.cpp  CMakeLists.txt  Makefile
03_event_driven_programming/: 03_event_driven_programming.cpp  CMakeLists.txt
04_key_presses/: 04_key_presses.cpp  CMakeLists.txt
05_surface_loading_and_soft_stretching/: 05_surface_loading_and_soft_stretching.cpp  CMakeLists.txt
06_extension_libs_and_other_image_formats/: 06_extension_libs_and_other_image_formats.cpp  CMakeLists.txt
07_texture_loading_and_rendering/: 07_texture_loading_and_rendering.cpp  CMakeLists.txt
08_geometry_rendering/: 08_geometry_rendering.cpp  CMakeLists.txt
09_the_viewport/: 09_the_viewport.cpp  CMakeLists.txt
10_colour_keying/: 10_colour_keying.cpp  CMakeLists.txt
11_clip_rendering_and_spritesheets/: 11_clip_rendering_and_spritesheets.cpp  CMakeLists.txt
12_colour_modulation/: 12_colour_modulation.cpp  CMakeLists.txt
13_alpha_blending/: 13_alpha_blending.cpp  CMakeLists.txt
common/: CMakeLists.txt  LTexture.cpp  LTexture.hpp
